--- a/styles/app.scss
+++ b/styles/app.scss
@@ -42,7 +42,7 @@ footer {
 .sk-cube-grid .sk-cube {
   width: 33%;
   height: 33%;
-  background-color: #555;
+  background-color: #fff;
   float: left;
   -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
   animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
